--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.2.0",
     "core-js": "^3.8.3",
+    "tom-select": "^2.2.2",
     "vee-validate": "^4.7.3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
